@startuml

package Presentation {
    class BlockUpdatePresenter {

    }
}

package ChunkRender {
    together {
        class BlockUpdateApplier {
            Apply(BlockGridCoordinate)
        }

        class UpdatedChunkSurfaceCalculator {
            Calculate(BlockGridCoordinate) : IEnumeable<ChunkSurface>
        }

        class ChunkRendererUpdater {
            Update(ChunkGridCoordinate, ChunkMesh)
        }
    }

    together {
        class CreatedChunkRenderers {
            Add(ChunkGridCoordinate, ChunkRenderer)
            Contains(ChunkGridCoordinate) : bool
            TryGetValue(ChunkGridCoordinate) : ChunkRenderer
            Remove(ChunkGridCoordinate)
        }

        class ChunkRenderer {
            SetMesh(ChunkMesh)
        }
    }

    together {
        class RenderingAroundPlayer {
            毎フレームチャンクを描画する
        }

        together {
            class InSightChunkCreator {
                Execute(PlayerChunk, MaxRenderingDadius)
            }
            
            class InSightChecker {
                Check(Bounds) : bool
            }

            class ChunkRendererFactory {
                Create(ChunkGridCoordinate) : ChunkRenderer
            }
        }

        class OutOfRangeChunkDisposer {
            Execute(PlayerChunk, MaxRenderingDadius)
        }
    }

}

BlockUpdatePresenter --> BlockUpdateApplier : "ブロックの更新をチャンク描画面に反映する"
BlockUpdateApplier --> UpdatedChunkSurfaceCalculator : "チャンク描画面の計算"

BlockUpdateApplier --> ChunkRendererUpdater : "Calculatorの戻り値をChunkRendererに反映"
ChunkRendererUpdater --> CreatedChunkRenderers : "既に作成されていれば\nメッシュを更新"
CreatedChunkRenderers *-- ChunkRenderer

RenderingAroundPlayer --> InSightChunkCreator : "視界内かつ描画距離内の\nチャンクを作成"
RenderingAroundPlayer --> OutOfRangeChunkDisposer : "描画範囲内のチャンクを削除する"

InSightChunkCreator ---> CreatedChunkRenderers : "作成済みか問い合わせ\n作成されていなければ追加"
InSightChunkCreator --> ChunkRendererFactory
InSightChunkCreator --> InSightChecker : "チャンクが視界内にあるか判定"
OutOfRangeChunkDisposer ---> CreatedChunkRenderers


@enduml